# Beyond_scrap

./: Dockerfile  README.md  docker-compose.yml  env-example  pyproject.toml
src/: main.py
src/crawler/: beyond.py
src/database/: commit_data.py  connection.py  models.py
src/environment/: cookies.py  header.py
src/get/: Dockerfile  main_get.py  send_data.py
src/get/parser/: convert_json.py  description_parser.py  price_parser.py
src/parser/: convert_json.py  description_parser.py  price_parser.py
src/post/: main_post.py  utils.py
